修改了添加作品界面

--- a/app/src/main/res/layout/activity_addphoto.xml
+++ b/app/src/main/res/layout/activity_addphoto.xml
@@ -1,8 +1,231 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/app_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dip">
 
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/addphoto_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:actualImageScaleType="centerCrop"/>
+        <ImageButton
+            android:id="@+id/addphoto_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerInside"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:src="@mipmap/ic_edit_white_36dp"
+            android:visibility="gone"
+            android:padding="10dip"
+            android:background="@null"/>
+        <Button
+            android:id="@+id/addphoto_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="点击添加作品"
+            android:textSize="18sp"
+            android:layout_centerInParent="true"
+            android:paddingLeft="20dip"
+            android:paddingRight="20dip"
+            android:paddingTop="15dip"
+            android:paddingBottom="15dip"
+            android:background="@drawable/add_photo_button_bg"
+            android:textColor="@color/colorSecondaryLight"/>
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/app_splite_line"/>
+    <LinearLayout
+        android:id="@+id/addphoto_name"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dip"
+        android:paddingRight="15dip"
+        android:background="@android:color/white"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="作品名称"
+            android:textColor="@android:color/secondary_text_light"/>
+
+        <EditText
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:textColor="@android:color/secondary_text_light"
+            android:hint="请输入..."
+            android:textSize="16sp"
+            android:layout_marginLeft="15dip"
+            android:textColorHint="@android:color/secondary_text_dark_nodisable"
+            android:layout_weight="1"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/app_splite_line"/>
+    <LinearLayout
+        android:id="@+id/addphoto_descript"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:gravity="center_vertical"
+        android:background="@android:color/white"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginLeft="15dip"
+            android:textColor="@android:color/secondary_text_light"
+            android:text="作品描述"/>
+        <Space
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="50dip"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_24px"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/app_splite_line"/>
+    <LinearLayout
+        android:id="@+id/addphoto_category"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@android:color/white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginLeft="15dip"
+            android:textColor="@android:color/secondary_text_light"
+            android:text="作品分类"/>
+        <Space
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="50dip"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_24px"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/app_splite_line"/>
+    <LinearLayout
+        android:id="@+id/addphoto_divice"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@android:color/white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginLeft="15dip"
+            android:textColor="@android:color/secondary_text_light"
+            android:text="拍摄器材"/>
+        <Space
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="50dip"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_24px"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/app_splite_line"/>
+    <LinearLayout
+        android:id="@+id/addphoto_address"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:gravity="center_vertical"
+        android:background="@android:color/white"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginLeft="15dip"
+            android:textColor="@android:color/secondary_text_light"
+            android:text="拍摄地点"/>
+        <Space
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="50dip"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_24px"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/app_splite_line"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:orientation="horizontal">
+
+        <me.gujun.android.taggroup.TagGroup
+            android:id="@+id/tag_group"
+            android:layout_marginLeft="20dip"
+            android:layout_marginRight="20dip"
+            android:layout_marginTop="15dip"
+            android:layout_marginBottom="15dip"
+            style="@style/TagGroup"
+            app:atg_isAppendMode="true"
+            app:atg_verticalSpacing="8dip"
+            app:atg_borderColor="@color/colorSecondary"
+            app:atg_checkedBorderColor="@color/colorPrimary"
+            app:atg_checkedBackgroundColor="@color/colorPrimary"
+            app:atg_textColor="@color/colorSecondary"
+            app:atg_pressedBackgroundColor="@color/colorSecondaryLight"
+            android:layout_width="0dip"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/addphoto_tag_button"
+            android:layout_width="60dip"
+            android:layout_height="20dip"
+            android:text="添加"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:background="@drawable/add_photo_tag_bg"
+            android:layout_marginTop="15dip"
+            android:layout_marginBottom="15dip"
+            android:layout_marginRight="20dip"/>
+
+    </LinearLayout>
 </LinearLayout>
