--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,12 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+    <style name="MainActivityTheme" parent="AppTheme">
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="AppNoActionbarTheme" parent="AppCanSlidrTheme">
         <!-- Customize your theme here. -->
         <item name="android:textAllCaps">false</item>
